--- a/hw3d/hw3d.vcxproj
+++ b/hw3d/hw3d.vcxproj
@@ -133,14 +133,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="app.cpp" />
+    <ClCompile Include="keyboard.cpp" />
+    <ClCompile Include="mouse.cpp" />
+    <ClCompile Include="timer.cpp" />
     <ClCompile Include="windowclass.cpp" />
     <ClCompile Include="basicerror.cpp" />
     <ClCompile Include="winmain.cpp" />
     <ClCompile Include="winmessagemap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="app.h" />
     <ClInclude Include="basicerror.h" />
+    <ClInclude Include="keyboard.h" />
     <ClInclude Include="mainwin.h" />
+    <ClInclude Include="mouse.h" />
+    <ClInclude Include="timer.h" />
     <ClInclude Include="windowclass.h" />
     <ClInclude Include="winmessagemap.h" />
   </ItemGroup>
