Organized and optimized - added orbiting cubes

--- a/hw3d/hw3d.vcxproj
+++ b/hw3d/hw3d.vcxproj
@@ -135,13 +135,18 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="bindable.cpp" />
+    <ClCompile Include="cube.cpp" />
+    <ClCompile Include="drawable.cpp" />
     <ClCompile Include="graphics.cpp" />
+    <ClCompile Include="indexbuffer.cpp" />
     <ClCompile Include="inputlayout.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="mouse.cpp" />
     <ClCompile Include="pixelshader.cpp" />
     <ClCompile Include="timer.cpp" />
     <ClCompile Include="topology.cpp" />
+    <ClCompile Include="transbuffer.cpp" />
+    <ClCompile Include="vertexbuffer.cpp" />
     <ClCompile Include="vertexshader.cpp" />
     <ClCompile Include="windowclass.cpp" />
     <ClCompile Include="basicerror.cpp" />
@@ -152,7 +157,11 @@
     <ClInclude Include="app.h" />
     <ClInclude Include="basicerror.h" />
     <ClInclude Include="bindable.h" />
+    <ClInclude Include="constantbuffer.h" />
+    <ClInclude Include="cube.h" />
+    <ClInclude Include="drawable.h" />
     <ClInclude Include="graphics.h" />
+    <ClInclude Include="indexbuffer.h" />
     <ClInclude Include="inputlayout.h" />
     <ClInclude Include="keyboard.h" />
     <ClInclude Include="macros.h" />
@@ -160,9 +169,11 @@
     <ClInclude Include="mouse.h" />
     <ClInclude Include="pipelineparts.h" />
     <ClInclude Include="pixelshader.h" />
-    <ClInclude Include="resource.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="topology.h" />
+    <ClInclude Include="transbuffer.h" />
+    <ClInclude Include="vertex.h" />
+    <ClInclude Include="vertexbuffer.h" />
     <ClInclude Include="vertexshader.h" />
     <ClInclude Include="windowclass.h" />
     <ClInclude Include="winmessagemap.h" />
