--- a/hw3d/hw3d.vcxproj
+++ b/hw3d/hw3d.vcxproj
@@ -233,6 +233,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="16-Bit-Link.png" />
+    <Image Include="16-Bit-Mario.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
